<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_timer">

    <fragment
        android:id="@+id/nav_timer"
        android:name="com.amoukaled.androidcodechallenge.fragments.TimerFragment"
        android:label="@string/timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/nav_list_view"
        android:name="com.amoukaled.androidcodechallenge.fragments.ListViewFragment"
        android:label="@string/list_view"
        tools:layout="@layout/fragment_list_view" />

    <fragment
        android:id="@+id/nav_todo"
        android:name="com.amoukaled.androidcodechallenge.fragments.TodoFragment"
        android:label="@string/todo"
        tools:layout="@layout/fragment_todo" />

</navigation>